# process-interface-cpp

./: .env  .gitignore  CMakeLists.txt  README.md  dev
bridge_adapter/: bridge_adapter.cpp  bridge_adapter.h
bridge_host/: main.cpp
config/hosts/: bridge.host.json  fixture.host.json
docs/: known-issues.md
docs/design/: compat-bridge-40318-v0.md  config-proposal.txt  contract-v0.md  design-v1.md  host-profiles-v0.md
fixture_adapter/: fixture_adapter.cpp  fixture_adapter.h
fixture_host/: main.cpp
ops/scripts/: build.py  ci_status_surface.py  interface_snapshot_validation.py  repo_paths.py  test.py
process_interface/action/: action_service.cpp  service.h
process_interface/common/: control_script_runner.cpp  control_script_runner.h
process_interface/config/: config_service.cpp  service.h
process_interface/host/: dispatcher.cpp  dispatcher.h
provider_api/: control_script_runner.cpp  control_script_runner.h  provider_api.h
scripts/: build.py  ci_status_surface.py  test.py
src/client/: main.cpp
src/common/: file_io.cpp  file_io.h  fs_compat.h  path_templates.cpp  path_templates.h  text.cpp  text.h  time_utils.cpp  time_utils.h
src/examples/: CMakeLists.txt  README.md  python_listen_demo.py  talk_client.cpp  talk_server.cpp
src/host/: main.cpp
src/host_runtime/: host_profile.cpp  host_profile.h  host_runtime.cpp  host_runtime.h
src/ipc/: IpcClient.h  IpcServer.h  IpcTypes.h
src/ipc/factory/: IpcFactory.cpp  IpcFactory.h
src/ipc/impl/: ZmqContext.cpp  ZmqContext.h  ZmqIpcClient.cpp  ZmqIpcClient.h  ZmqIpcServer.cpp  ZmqIpcServer.h
src/platform/: file_replace.cpp  file_replace.h  port_probe.cpp  port_probe.h  process_exec.cpp  process_exec.h  process_probe.cpp  process_probe.h
src/process_interface/common/: action_catalog.cpp  action_catalog.h  action_executor.cpp  action_executor.h  action_jobs.cpp  action_jobs.h  action_response.cpp  action_response.h  control_script_runner.cpp  control_script_runner.h
src/process_interface/host/: dispatcher.cpp  dispatcher.h
src/status/: api.cpp  api.h  context.h  debug.h  engine.h  error_map.h  fs.h  paths.cpp  paths.h  probes.cpp  probes.h  spec_loader.cpp  spec_loader.h  status_engine.cpp  status_engine.h  status_expression_parser.cpp  status_expression_parser.h  status_operation_registry.cpp  status_operation_registry.h  writer.cpp  writer.h
src/wire_v0/: wire_v0.cpp  wire_v0.h
status/: api.cpp  api.h  context.cpp  context.h  debug.cpp  engine.cpp  engine.h  error_map.cpp  fs.h  paths.cpp  paths.h  spec_loader.cpp  spec_loader.h  writer.cpp  writer.h
status_parity/: generate_status_payload_parity.py  status_payload_parity.json
test/status_parity/: generate_status_payload_parity.py  status_payload_parity.json
test/unit/: test_host_contract.py
wire_v0/: wire_v0.cpp  wire_v0.h
